refactor: address Error Prone warnings