@@ -385,24 +385,23 @@ public class ProjectTree extends JTree {
         return null; // Child component not found
     }
 
-
     private List<ProjectFile> getSelectedProjectFiles() {
         TreePath[] selectionPaths = getSelectionPaths();
         if (selectionPaths == null || selectionPaths.length == 0) {
-            return Collections.emptyList();
+            return List.of(); // Immutable empty list
         }
 
-        var selectedFiles = new ArrayList<ProjectFile>();
+        var selectedFilesList = new ArrayList<ProjectFile>();
         for (TreePath path : selectionPaths) {
             DefaultMutableTreeNode node = (DefaultMutableTreeNode) path.getLastPathComponent();
             if (node.getUserObject() instanceof ProjectTreeNode treeNode && treeNode.getFile().isFile()) {
                 ProjectFile pf = getProjectFileFromNode(node);
                 if (pf != null) {
-                    selectedFiles.add(pf);
+                    selectedFilesList.add(pf);
                 }
             }
         }
-        return selectedFiles;
+        return List.copyOf(selectedFilesList); // Return immutable list
     }
 
     private ProjectFile getProjectFileFromNode(DefaultMutableTreeNode node) {
